# mini-coder

./: .gitignore  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.claude/agents/: agent-orchestrator.md  architectural-consultant.md  code-reviewer.md  environment-tester.md  implementer.md  planner.md
.cursor/plans/: 对话耗时统计_tui_展示_bcc7f2d3.plan.md
.docs/: subagent-system-guide.md
.docs/knowledge-base/: index.md
config/: llm.yaml  tools.yaml
docs/: agent-mailbox-schema.md  agents-tools-architecture-review.md  claude-code-prompts-analysis.md  claude-subagent-architecture-research.md  command-execution-security-design.md  context-memory-design.md  langgraph-refactor-analysis.md  langgraph-refactor-deep-analysis.md  langgraph-refactor-design.md  langgraph-refactor-tasks.md  memory-system-analysis-and-langgraph-reuse.md  multi-agent-architecture-design.md  pending-changes-summary.md  project-code-review.md  project-notes-enhancement.md  prompts-code-alignment-review.md  prompts-optimization-notes.md  quality-pipeline-spec.md  reviewer-tool-calling-and-work-dir.md  simple-coding-agent-prompts-design.md  tools-architecture-design.md  tui-agent-dispatch-analysis.md  tui-agent-display-design-REVIEW.md  tui-agent-display-design.md  tui-agent-orchestrator-flow-analysis.md  tui-input-to-llm-latency-analysis.md  tui-repl-exit-analysis.md
docs/agent-prompts/: README.md  claude-agent-design.md  claude-agent-design2.md  claude-agent-spec-and-prompts-for-mini-coder.md  main-agent.md  subagent-explorer.md  subagent-fixer.md
docs/bugs/: tui-startup-delay-90s-embeddings-torch.md
openspec/: config.yaml
prompts/system/: general-purpose.md  main-agent.md  mini-coder-guide.md  subagent-bash.md  subagent-coder.md  subagent-explorer.md  subagent-planner.md  subagent-reviewer.md  unified-planner-orchestrator.md
prompts/templates/: coding-standards.md  project-context.md
prompts/tools/: command.md
src/mini_coder/: __init__.py
tests/: __init__.py
tests/agents/: __init__.py  test_agent_capability.py  test_orchestrator.py  test_output_parser.py  test_parallel_workflow.py  test_prompt_loader.py  test_scheduler.py  test_subagent.py
tests/graph/: test_builder.py  test_edges.py  test_nodes.py  test_prompts.py  test_roles.py  test_runner.py  test_state.py  test_state_helpers.py  test_structured_output.py
tests/integration/: test_core_functionality.py
tests/memory/: test_context_builder.py  test_embeddings.py  test_extractor.py  test_llm_service_context.py  test_manager.py  test_models.py  test_persistent_store.py  test_project_notes.py  test_relations.py  test_token_counter.py  test_working_memory.py
tests/tools/: test_command.py  test_event_adapter.py  test_executor.py  test_filter.py  test_langchain_tools.py  test_permission.py  test_security.py  test_tool_scheduler_adapter.py
tests/tracing/: test_client.py
tests/tui/: test_app.py  test_config.py  test_console_app.py  test_console_app_interactive.py  test_llm_performance.py  test_main.py  test_rendering.py  test_thinking.py
(+164 files in other folders)
