[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-coder"
version = "0.2.0"
description = "A custom multi-agent coding assistant with TUI support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "mini-coder Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "numpy>=1.24.0",
    # LangGraph ecosystem
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
# LangGraph with LLM providers
langgraph-full = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
]
# MCP support
mcp = [
    "langchain-mcp-adapters>=0.1.0",
]
# 语义检索默认使用 fastembed（无 PyTorch，内存占用小）
semantic = [
    "fastembed>=0.2.0",
]
# 使用在线 embedding API（DashScope/OpenAI 等）时安装
semantic-api = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
mini-coder-tui = "mini_coder.tui.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mini_coder.tui" = ["styles.css"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
